--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- HEADER -->
   <header class="site-header">
     <div class="header-left">
-      <img src="images/Modular Gunworks LLC.png" alt="Modular Gunworks LLC" class="logo">
+      <img src="images/modular-gunworks-llc.png" alt="Modular Gunworks LLC" class="logo">
     </div>
 
     <div class="header-center">
@@ -41,62 +41,67 @@
 
   <!-- PROMO BANNER -->
   <section class="promo-banner">
-    <h2>HOLIDAY SALE — 6% OFF EVERYTHING</h2>
-    <p>Use Code: <strong>6PGIFT</strong> • Free Shipping Over $249</p>
+    <h2>Under Construction</h2>
+    <p>Use Code: <strong>Build</strong> • Free Shipping Over $249</p>
   </section>
 
   <!-- CATEGORY GRID -->
-  <a class="tile" href="shop/ammunition.md">
-  <img src="images/categories/ammunition.jpg" alt="Ammunition">
-  <span>Ammunition</span>
-</a>
+  <section class="category-grid">
+    <h2>Shop by Category</h2>
 
-<a class="tile" href="shop/guns.md">
-  <img src="images/categories/guns.jpg" alt="Guns">
-  <span>Guns</span>
-</a>
+    <div class="grid">
 
-<a class="tile" href="shop/magazines.md">
-  <img src="images/categories/magazines.jpg" alt="Magazines">
-  <span>Magazines</span>
-</a>
+      <a class="tile" href="shop/ammunition.md">
+        <img src="images/categories/ammunition.jpg" alt="Ammunition">
+        <span>Ammunition</span>
+      </a>
 
-<a class="tile" href="shop/gun-parts.md">
-  <img src="images/categories/gun-parts.jpg" alt="Gun Parts">
-  <span>Gun Parts</span>
-</a>
+      <a class="tile" href="shop/guns.md">
+        <img src="images/categories/guns.jpg" alt="Guns">
+        <span>Guns</span>
+      </a>
 
-<a class="tile" href="shop/gear.md">
-  <img src="images/categories/gear.jpg" alt="Gear">
-  <span>Gear</span>
-</a>
+      <a class="tile" href="shop/magazines.md">
+        <img src="images/categories/magazines.jpg" alt="Magazines">
+        <span>Magazines</span>
+      </a>
 
-<a class="tile" href="shop/optics.md">
-  <img src="images/categories/optics.jpg" alt="Optics">
-  <span>Optics & Sights</span>
-</a>
+      <a class="tile" href="shop/gun-parts.md">
+        <img src="images/categories/gun-parts.jpg" alt="Gun Parts">
+        <span>Gun Parts</span>
+      </a>
 
-<a class="tile" href="shop/reloading.md">
-  <img src="images/categories/reloading.jpg" alt="Reloading">
-  <span>Reloading</span>
-</a>
+      <a class="tile" href="shop/gear.md">
+        <img src="images/categories/gear.jpg" alt="Gear">
+        <span>Gear</span>
+      </a>
 
-<a class="tile" href="shop/survival.md">
-  <img src="images/categories/survival.jpg" alt="Survival">
-  <span>Prep & Survival</span>
-</a>
+      <a class="tile" href="shop/optics.md">
+        <img src="images/categories/optics.jpg" alt="Optics">
+        <span>Optics & Sights</span>
+      </a>
 
-<a class="tile" href="shop/brands.md">
-  <img src="images/categories/brands.jpg" alt="Brands">
-  <span>Shop by Brand</span>
-</a>
+      <a class="tile" href="shop/reloading.md">
+        <img src="images/categories/reloading.jpg" alt="Reloading">
+        <span>Reloading</span>
+      </a>
 
-<a class="tile" href="shop/sale.md">
-  <img src="images/categories/sale.jpg" alt="Sale">
-  <span>On Sale</span>
-</a>
-</div>
+      <a class="tile" href="shop/survival.md">
+        <img src="images/categories/survival.jpg" alt="Survival">
+        <span>Prep & Survival</span>
+      </a>
 
+      <a class="tile" href="shop/brands.md">
+        <img src="images/categories/brands.jpg" alt="Brands">
+        <span>Shop by Brand</span>
+      </a>
+
+      <a class="tile" href="shop/sale.md">
+        <img src="images/categories/sale.jpg" alt="Sale">
+        <span>On Sale</span>
+      </a>
+
+    </div>
   </section>
 
   <!-- FOOTER -->
@@ -140,4 +145,3 @@
 
 </body>
 </html>
-
