Fix category layout with square padded images

--- a/index.html
+++ b/index.html
@@ -45,63 +45,85 @@
     <p>Use Code: <strong>Build</strong> • Free Shipping Over $249</p>
   </section>
 
-  <!-- CATEGORY GRID -->
-  <section class="category-grid">
-    <h2>Shop by Category</h2>
+ <!-- CATEGORY GRID -->
+<section class="category-grid">
+  <h2>Shop by Category</h2>
 
-    <div class="grid">
+  <div class="grid">
 
-      <a class="tile" href="shop/ammunition.md">
+    <a class="tile" href="shop/ammunition.md">
+      <div class="image-box">
         <img src="images/categories/ammunition.jpg" alt="Ammunition">
-        <span>Ammunition</span>
-      </a>
+      </div>
+      <span>Ammunition</span>
+    </a>
 
-      <a class="tile" href="shop/guns.md">
+    <a class="tile" href="shop/guns.md">
+      <div class="image-box">
         <img src="images/categories/guns.jpg" alt="Guns">
-        <span>Guns</span>
-      </a>
+      </div>
+      <span>Guns</span>
+    </a>
 
-      <a class="tile" href="shop/magazines.md">
+    <a class="tile" href="shop/magazines.md">
+      <div class="image-box">
         <img src="images/categories/magazines.jpg" alt="Magazines">
-        <span>Magazines</span>
-      </a>
+      </div>
+      <span>Magazines</span>
+    </a>
 
-      <a class="tile" href="shop/gun-parts.md">
+    <a class="tile" href="shop/gun-parts.md">
+      <div class="image-box">
         <img src="images/categories/gun-parts.jpg" alt="Gun Parts">
-        <span>Gun Parts</span>
-      </a>
+      </div>
+      <span>Gun Parts</span>
+    </a>
 
-      <a class="tile" href="shop/gear.md">
+    <a class="tile" href="shop/gear.md">
+      <div class="image-box">
         <img src="images/categories/gear.jpg" alt="Gear">
-        <span>Gear</span>
-      </a>
+      </div>
+      <span>Gear</span>
+    </a>
 
-      <a class="tile" href="shop/optics.md">
+    <a class="tile" href="shop/optics.md">
+      <div class="image-box">
         <img src="images/categories/optics.jpg" alt="Optics">
-        <span>Optics & Sights</span>
-      </a>
+      </div>
+      <span>Optics & Sights</span>
+    </a>
 
-      <a class="tile" href="shop/reloading.md">
+    <a class="tile" href="shop/reloading.md">
+      <div class="image-box">
         <img src="images/categories/reloading.jpg" alt="Reloading">
-        <span>Reloading</span>
-      </a>
+      </div>
+      <span>Reloading</span>
+    </a>
 
-      <a class="tile" href="shop/survival.md">
+    <a class="tile" href="shop/survival.md">
+      <div class="image-box">
         <img src="images/categories/survival.jpg" alt="Survival">
-        <span>Prep & Survival</span>
-      </a>
+      </div>
+      <span>Prep & Survival</span>
+    </a>
 
-      <a class="tile" href="shop/brands.md">
+    <a class="tile" href="shop/brands.md">
+      <div class="image-box">
         <img src="images/categories/brands.jpg" alt="Brands">
-        <span>Shop by Brand</span>
-      </a>
+      </div>
+      <span>Shop by Brand</span>
+    </a>
 
-      <a class="tile" href="shop/sale.md">
+    <a class="tile" href="shop/sale.md">
+      <div class="image-box">
         <img src="images/categories/sale.jpg" alt="Sale">
-        <span>On Sale</span>
-      </a>
+      </div>
+      <span>On Sale</span>
+    </a>
 
-    </div>
+  </div>
+</section>
+
   </section>
 
   <!-- FOOTER -->
