updates to header

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 
   <!-- HEADER -->
   <header class="site-header">
-    <div class="header-left">
-   <img src="images/modular-gunworks-llc.png" alt="Modular Gunworks LLC" class="logo">
-    </div>
+    <div class="hero-header">
+  WELCOME TO MODULAR GUNWORKS LLC
+</div>
+
 
     <div class="header-center">
       <input type="text" class="search-bar" placeholder="Search products...">
