Updated index for header

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 
 <body>
 
-  <!-- HEADER -->
-  <header class="site-header">
-    <div class="hero-header">
-  WELCOME TO MODULAR GUNWORKS LLC
-</div>
+  <!-- HERO FLAG HEADER (FULL WIDTH) -->
+  <div class="hero-header">
+    WELCOME TO MODULAR GUNWORKS LLC
+  </div>
 
+  <!-- MAIN SITE HEADER (LOGO, SEARCH, ACCOUNT LINKS) -->
+  <header class="site-header">
 
     <div class="header-center">
       <input type="text" class="search-bar" placeholder="Search products...">
@@ -24,6 +25,7 @@
       <a href="#">Help Center</a>
       <a href="#">View Cart</a>
     </div>
+
   </header>
 
   <!-- NAVIGATION -->
