Updated search to move in center

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!-- MAIN SITE HEADER (LOGO, SEARCH, ACCOUNT LINKS) -->
   <header class="site-header">
-
+<div class="header-left"></div> <!-- NEW -->
     <div class="header-center">
       <input type="text" class="search-bar" placeholder="Search products...">
     </div>
