--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
       <p><a href="mailto:support@modulargunworks.com">support@modulargunworks.com</a></p>
     </div>
   </footer>
+  <!-- AGE VERIFICATION POPUP -->
 <div id="age-verification" class="popup">
   <div class="popup-content">
     <img src="images/modular-gunworks-llc.png" alt="Modular Gunworks LLC" class="popup-logo">
