--- a/terms.html
+++ b/terms.html
@@ -76,15 +76,18 @@
     }
 
     .policy-toggle {
-      width: 100%;
-      text-align: left;
-      padding: 0.75rem 1rem;
-      border: none;
-      background: none;
-      color: #fff;
-      font-weight: 600;
-      cursor: pointer;
-    }
+  position: relative;
+  padding-left: 2rem;
+  width: 100%;
+  text-align: left;
+  background: none;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  font-weight: 600;
+  display: block; /* IMPORTANT — fixes right-side alignment */
+}
+
 
     .policy-content {
       display: none;
