--- a/terms.html
+++ b/terms.html
@@ -102,6 +102,7 @@
     cursor: pointer;
     font-weight: 600;
     display: block;
+    white-space: nowrap; /* prevents text from dropping under the bullet hole */
   }
 
   .policy-content {
