--- a/terms.html
+++ b/terms.html
@@ -150,7 +150,8 @@
   /* Bullet-hole icon (collapsed state: splatter) */
   .policy-toggle .bullet-icon {
     position: absolute;
-    left: 0.75rem;          /* forces icon to the LEFT */
+    right: 0.75rem;  /* forces icon to the Right */
+    left: auto;
     top: 50%;
     transform: translateY(-50%);
     width: 14px;
