--- a/terms.html
+++ b/terms.html
@@ -59,17 +59,20 @@
   }
 
   .policy-title {
-    margin-top: 1rem;
-  }
+  text-align: center;
+  width: 100%;
+  margin-top: 1rem;
+}
+
 
   .doc-section-anchor {
     scroll-margin-top: 140px;
   }
 
-  /* Expand All / Collapse All button */
-  .expand-all-btn {
-  display: block;        /* allows margin auto to work */
-  margin-left: auto;     /* pushes button to the RIGHT */
+ /* Expand All / Collapse All button */
+.expand-all-btn {
+  display: block;
+  margin-left: auto;     /* right align */
   margin-right: 0;
   margin-bottom: 1rem;
   padding: 0.5rem 1rem;
@@ -81,98 +84,112 @@
   font-size: 0.9rem;
 }
 
+.expand-all-btn:hover {
+  background-color: rgba(255,255,255,0.2);
+}
 
-  .expand-all-btn:hover {
-    background-color: rgba(255,255,255,0.2);
-  }
+/* Collapsible sections */
+.policy-section {
+  width: 100%;
+  display: block;
+  border-radius: 4px;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.35);
+  border: 1px solid rgba(255, 255, 255, 0.07);
+  margin-bottom: 0.5rem;
+}
 
-  /* Collapsible sections */
-  .policy-section {
-    margin-bottom: 1rem;
-    border-radius: 4px;
-    overflow: hidden;
-    background-color: rgba(0, 0, 0, 0.35);
-    border: 1px solid rgba(255, 255, 255, 0.07);
-  }
+/* FULL-WIDTH BAR FIX */
+.policy-toggle {
+  width: 100%;
+  display: flex;                     /* left text + right icon */
+  justify-content: space-between;    /* push bullet to right */
+  align-items: center;
+  padding: 0.75rem 1rem;
+  background: none;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  font-weight: 600;
+  text-align: left;
+  white-space: nowrap;
+  background-color: rgba(255,255,255,0.03);
+  transition: background-color 0.2s ease;
+}
 
-  .policy-toggle {
-    position: relative;
-    padding-left: 2rem;
-    width: 100%;
-    text-align: left;
-    background: none;
-    border: none;
-    color: #fff;
-    cursor: pointer;
-    font-weight: 600;
-    display: block;
-    white-space: nowrap; /* prevents text from dropping under the bullet hole */
-  }
+.policy-toggle:hover {
+  background-color: rgba(255,255,255,0.07);
+}
 
-  .policy-content {
-    display: none;
-    padding: 0.75rem 1rem 1rem 1rem;
-    font-size: 0.95rem;
-  }
+.policy-toggle.open {
+  background-color: rgba(255,255,255,0.1);
+}
 
-  .policy-content p {
-    margin-bottom: 0.6rem;
-  }
+/* Content */
+.policy-content {
+  display: none;
+  padding: 0.75rem 1rem 1rem 1rem;
+  font-size: 0.95rem;
+}
 
-  .policy-content ul {
-    padding-left: 1.1rem;
-    margin: 0.4rem 0 0.6rem 0;
-  }
+.policy-content p {
+  margin-bottom: 0.6rem;
+}
 
-  .policy-content li {
-    margin-bottom: 0.25rem;
-  }
+.policy-content ul {
+  padding-left: 1.1rem;
+  margin: 0.4rem 0 0.6rem 0;
+}
 
-  .policy-updated {
-    text-align: center;
-    width: 100%;
-    font-size: 0.85rem;
-  }
+.policy-content li {
+  margin-bottom: 0.25rem;
+}
 
-  .policy-subsection {
-    margin: 0.5rem 0;
-    border-radius: 3px;
-    border: 1px solid rgba(255, 255, 255, 0.05);
-    overflow: hidden;
-  }
+/* Center Last Updated */
+.policy-updated {
+  text-align: center;
+  width: 100%;
+  font-size: 0.85rem;
+}
 
-  .policy-subsection .policy-toggle {
-    font-size: 0.9rem;
-    padding: 0.5rem 0.75rem;
-  }
+/* Subsections */
+.policy-subsection {
+  margin: 0.5rem 0;
+  border-radius: 3px;
+  border: 1px solid rgba(255, 255, 255, 0.05);
+  overflow: hidden;
+}
 
-  .policy-subsection .policy-content {
-    font-size: 0.9rem;
-    padding: 0.6rem 0.75rem 0.75rem 0.75rem;
-  }
+.policy-subsection .policy-toggle {
+  font-size: 0.9rem;
+  padding: 0.5rem 0.75rem;
+}
 
-  /* Bullet-hole icon (collapsed state: splatter) */
-  .policy-toggle .bullet-icon {
-    position: absolute;
-    right: 0.75rem;  /* forces icon to the Right */
-    left: auto;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 14px;
-    height: 14px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    opacity: 0.9;
-    transition: transform 0.25s ease, opacity 0.25s ease;
-    background-image: url('data:image/svg+xml;utf8,<svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg"><circle cx="7" cy="7" r="3" fill="black"/><path d="M7 0 L7 3 M7 11 L7 14 M0 7 L3 7 M11 7 L14 7 M2 2 L4 4 M10 10 L12 12 M2 12 L4 10 M10 4 L12 2" stroke="black" stroke-width="1"/></svg>');
-  }
+.policy-subsection .policy-content {
+  font-size: 0.9rem;
+  padding: 0.6rem 0.75rem 0.75rem 0.75rem;
+}
 
-  /* Expanded state: cracked bullet hole */
-  .policy-toggle.open .bullet-icon {
-    transform: scale(1.25);
-    opacity: 1;
-    background-image: url('data:image/svg+xml;utf8,<svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg"><circle cx="7" cy="7" r="4" fill="black"/><path d="M7 0 L7 4 M7 10 L7 14 M0 7 L4 7 M10 7 L14 7 M1 1 L5 5 M9 9 L13 13 M1 13 L5 9 M9 5 L13 1" stroke="black" stroke-width="1.2"/></svg>');
-  }
+/* Bullet-hole icon (flex version) */
+.policy-toggle .bullet-icon {
+  width: 14px;
+  height: 14px;
+  margin-left: auto;        /* push icon to right */
+  margin-right: 0.5rem;
+  background-size: cover;
+  background-repeat: no-repeat;
+  opacity: 0.9;
+  transition: transform 0.25s ease, opacity 0.25s ease;
+  background-image: url('data:image/svg+xml;utf8,<svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg"><circle cx="7" cy="7" r="3" fill="black"/><path d="M7 0 L7 3 M7 11 L7 14 M0 7 L3 7 M11 7 L14 7 M2 2 L4 4 M10 10 L12 12 M2 12 L4 10 M10 4 L12 2" stroke="black" stroke-width="1"/></svg>');
+}
+
+/* Expanded state: cracked bullet hole */
+.policy-toggle.open .bullet-icon {
+  transform: scale(1.25);
+  opacity: 1;
+  background-image: url('data:image/svg+xml;utf8,<svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg"><circle cx="7" cy="7" r="4" fill="black"/><path d="M7 0 L7 4 M7 10 L7 14 M0 7 L4 7 M10 7 L14 7 M1 1 L5 5 M9 9 L13 13 M1 13 L5 9 M9 5 L13 1" stroke="black" stroke-width="1.2"/></svg>');
+}
+
 </style>
 </head>
 
