--- a/terms.html
+++ b/terms.html
@@ -101,10 +101,8 @@
 
 /* FULL-WIDTH BAR FIX */
 .policy-toggle {
+  position: relative;
   width: 100%;
-  display: flex;                     /* left text + right icon */
-  justify-content: space-between;    /* push bullet to right */
-  align-items: center;
   padding: 0.75rem 1rem;
   background: none;
   border: none;
@@ -116,6 +114,7 @@
   background-color: rgba(255,255,255,0.03);
   transition: background-color 0.2s ease;
 }
+
 
 .policy-toggle:hover {
   background-color: rgba(255,255,255,0.07);
