--- a/terms.html
+++ b/terms.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Terms & Document Hub - Modular Gunworks LLC</title>
+  <title>Modular Gunworks LLC</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="favicon.png">
 
