--- a/terms.html
+++ b/terms.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Modular Gunworks LLC</title>
+  <title>Terms & Document Hub - Modular Gunworks LLC</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="favicon.png">
 
@@ -200,6 +200,7 @@
 
   <!-- HERO FLAG HEADER -->
   <div class="hero-header">
+    Modular Gunworks LLC
     TERMS & DOCUMENT HUB
   </div>
 
