--- a/terms.html
+++ b/terms.html
@@ -201,9 +201,10 @@
   <!-- HERO FLAG HEADER -->
   <div class="hero-header">
     Modular Gunworks LLC
-    TERMS & DOCUMENT HUB
-  </div>
-
+    </div>
+<div class="hero-header">
+  TERMS & DOCUMENT HUB
+</div>
   <!-- MAIN SITE HEADER -->
   <header class="site-header">
     <div class="header-left"></div>
