--- a/terms.html
+++ b/terms.html
@@ -199,12 +199,11 @@
 <body>
 
   <!-- HERO FLAG HEADER -->
-  <div class="hero-header">
-    Modular Gunworks LLC
-    </div>
-<div class="hero-header">
-  TERMS & DOCUMENT HUB
-</div>
+ <a href="index.html" class="hero-header">
+  <div class="hero-title">Modular Gunworks LLC</div>
+  <div class="hero-subtitle">TERMS & DOCUMENT HUB</div>
+</a>
+
   <!-- MAIN SITE HEADER -->
   <header class="site-header">
     <div class="header-left"></div>
