--- a/terms.html
+++ b/terms.html
@@ -200,10 +200,11 @@
 
   <!-- HERO FLAG HEADER -->
  <a href="index.html" class="hero-header">
-  <div class="hero-title">Modular Gunworks LLC</div>
-  <div class="hero-subtitle">TERMS & DOCUMENT HUB</div>
+  <div class="hero-text">
+    <div class="hero-title">MODULAR GUNWORKS LLC</div>
+    <div class="hero-subtitle">TERMS & DOCUMENT HUB</div>
+  </div>
 </a>
-
   <!-- MAIN SITE HEADER -->
   <header class="site-header">
     <div class="header-left"></div>
