--- a/privacy.html
+++ b/privacy.html
@@ -1,42 +1,268 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Privacy Policy - Modular Gunworks LLC</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Privacy Policy – Modular Gunworks LLC</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
-  <div class="hero-header">
-    Privacy Policy
+  <!-- HERO FLAG HEADER -->
+  <a href="index.html" class="hero-header">
+    <div class="hero-title">Modular Gunworks LLC</div>
+    <div class="hero-subtitle">Privacy Policy</div>
+  </a>
+
+  <!-- MAIN SITE HEADER -->
+  <header class="site-header">
+    <div class="header-left"></div>
+    <div class="header-center">
+      <input type="text" class="search-bar" placeholder="Search products...">
+    </div>
+    <div class="header-right">
+      <a href="#">Account Login</a>
+      <a href="#">Help Center</a>
+      <a href="#">View Cart</a>
+    </div>
+  </header>
+
+  <!-- NAVIGATION -->
+  <nav class="category-nav">
+    <a href="shop/ammunition.md">Ammunition</a>
+    <a href="shop/guns.md">Guns</a>
+    <a href="shop/magazines.md">Magazines</a>
+    <a href="shop/gun-parts.md">Gun Parts</a>
+    <a href="shop/gear.md">Gear</a>
+    <a href="shop/optics.md">Optics & Sights</a>
+    <a href="shop/reloading.md">Reloading</a>
+    <a href="shop/survival.md">Prep & Survival</a>
+    <a href="shop/brands.md">Brands</a>
+    <a href="shop/sale.md">ON SALE</a>
+  </nav>
+
+  <!-- DOCUMENT HUB LAYOUT -->
+  <div class="doc-layout">
+
+    <!-- SIDEBAR -->
+    <aside class="doc-sidebar">
+      <h2>Explore Our Document Hub</h2>
+      <ul>
+        <li><a href="#sec-privacy-intro">Introduction</a></li>
+        <li><a href="#sec-privacy-changes">Changes to This Privacy Policy</a></li>
+        <li><a href="#sec-privacy-collection">Information Collection</a></li>
+        <li><a href="#sec-privacy-processing">Why We Process Your Information</a></li>
+        <li><a href="#sec-privacy-cookies">Cookies & Similar Technologies</a></li>
+        <li><a href="#sec-privacy-california">California Shine the Light Disclosure</a></li>
+        <li><a href="#sec-privacy-contact">Contact Us</a></li>
+        <li><a href="#sec-privacy-state-notices">US State Privacy Notices</a></li>
+        <li><a href="#sec-privacy-request">Make a Privacy Request</a></li>
+        <li><a href="#sec-privacy-choices">Your Privacy Choices</a></li>
+      </ul>
+    </aside>
+
+    <!-- MAIN CONTENT -->
+    <main class="doc-main">
+
+      <h1 class="policy-title">Privacy Policy – Modular Gunworks LLC</h1>
+      <p class="policy-updated">Last Updated: 23 September 2025</p>
+
+      <button id="expand-collapse-all" class="expand-all-btn">Expand All</button>
+
+      <!-- ============================
+           PRIVACY POLICY SECTIONS
+           ============================ -->
+
+      <!-- INTRO -->
+      <div id="sec-privacy-intro" class="policy-section">
+        <button class="policy-toggle">Introduction</button>
+        <div class="policy-content">
+          <p>Modular Gunworks LLC (“Modular Gunworks”, “we”, “us”, or “our”) respects your privacy and is committed to protecting it through this Privacy Policy.</p>
+          <p>This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our website, purchase products, contact our support team, engage with us on social media, or otherwise interact with our services (“Services”).</p>
+          <p>By accessing or using our Services, you agree to the practices described in this Privacy Policy. If you do not agree, you should discontinue use of our Services.</p>
+        </div>
+      </div>
+
+      <!-- CHANGES -->
+      <div id="sec-privacy-changes" class="policy-section">
+        <button class="policy-toggle">Changes to This Privacy Policy</button>
+        <div class="policy-content">
+          <p>We may update this Privacy Policy from time to time. When changes occur, we will revise the “Last Updated” date at the top of this page. In some cases, we may provide additional notice, such as posting an announcement on our homepage or sending an email notification.</p>
+          <p>Your continued use of the Services after any changes indicates acceptance of the updated Privacy Policy.</p>
+        </div>
+      </div>
+
+      <!-- INFORMATION COLLECTION -->
+      <div id="sec-privacy-collection" class="policy-section">
+        <button class="policy-toggle">Information Collection</button>
+        <div class="policy-content">
+          <p>We collect information in several ways, including information you provide directly, information collected automatically, and information from third-party sources.</p>
+
+          <h4>Information You Provide</h4>
+          <ul>
+            <li>Personal Identifiers (name, email, phone number, shipping/billing address)</li>
+            <li>Account Information</li>
+            <li>Order and Payment Information</li>
+            <li>Communications (emails, messages, support requests)</li>
+            <li>Uploaded documents (e.g., FFL information)</li>
+          </ul>
+
+          <h4>Information Collected Automatically</h4>
+          <ul>
+            <li>IP address and general location</li>
+            <li>Device and browser information</li>
+            <li>Pages viewed and site interactions</li>
+            <li>Referring URLs</li>
+          </ul>
+
+          <h4>Information From Third Parties</h4>
+          <ul>
+            <li>Payment processors</li>
+            <li>Shipping carriers</li>
+            <li>Marketing and analytics partners</li>
+          </ul>
+
+          <h4>Data Retention</h4>
+          <p>We retain personal information only as long as necessary to fulfill the purposes described in this Privacy Policy, comply with legal obligations, resolve disputes, and enforce our agreements.</p>
+        </div>
+      </div>
+
+      <!-- WHY WE PROCESS -->
+      <div id="sec-privacy-processing" class="policy-section">
+        <button class="policy-toggle">Why We Process Your Information</button>
+        <div class="policy-content">
+          <p>We use personal information for the following purposes:</p>
+          <ul>
+            <li>Processing and fulfilling orders</li>
+            <li>Providing customer support</li>
+            <li>Managing accounts and preferences</li>
+            <li>Improving our website and Services</li>
+            <li>Marketing and promotional communications</li>
+            <li>Fraud prevention and security monitoring</li>
+            <li>Compliance with federal, state, and local laws</li>
+            <li>Analytics and performance tracking</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- COOKIES -->
+      <div id="sec-privacy-cookies" class="policy-section">
+        <button class="policy-toggle">Cookies & Similar Technologies</button>
+        <div class="policy-content">
+          <h4>Cookies</h4>
+          <p>We use first- and third-party cookies to enhance your browsing experience, analyze site traffic, and support essential site functions.</p>
+
+          <h4>Do Not Track</h4>
+          <p>Our website does not currently respond to Do Not Track (DNT) signals due to a lack of industry-wide standards.</p>
+
+          <h4>Analytics Tools</h4>
+          <p>We use analytics tools to understand how users interact with our Services and to improve performance and usability.</p>
+        </div>
+      </div>
+
+      <!-- CALIFORNIA -->
+      <div id="sec-privacy-california" class="policy-section">
+        <button class="policy-toggle">California Shine the Light Disclosure</button>
+        <div class="policy-content">
+          <p>California residents with an established business relationship may request information about categories of personal information shared with third parties for direct marketing purposes during the preceding calendar year.</p>
+          <p>To submit a request, please contact us using the information in the “Contact Us” section.</p>
+        </div>
+      </div>
+
+      <!-- CONTACT -->
+      <div id="sec-privacy-contact" class="policy-section">
+        <button class="policy-toggle">Contact Us</button>
+        <div class="policy-content">
+          <p>If you have questions about this Privacy Policy or your personal information, please contact us:</p>
+          <p><strong>Modular Gunworks LLC</strong><br>
+          Email: support@modulargunworks.com<br>
+          Phone: (XXX) XXX‑XXXX<br>
+          Website: https://modulargunworks.com</p>
+        </div>
+      </div>
+
+      <!-- STATE NOTICES -->
+      <div id="sec-privacy-state-notices" class="policy-section">
+        <button class="policy-toggle">US State Privacy Notices</button>
+        <div class="policy-content">
+          <p>Certain states provide additional privacy rights to their residents. If you reside in a state with applicable privacy laws, you may have rights such as:</p>
+          <ul>
+            <li>Right to access personal information</li>
+            <li>Right to delete personal information</li>
+            <li>Right to correct inaccurate information</li>
+            <li>Right to opt out of certain data uses</li>
+          </ul>
+          <p>To exercise these rights, see “Make a Privacy Request.”</p>
+        </div>
+      </div>
+
+      <!-- PRIVACY REQUEST -->
+      <div id="sec-privacy-request" class="policy-section">
+        <button class="policy-toggle">Make a Privacy Request</button>
+        <div class="policy-content">
+          <p>You may submit a privacy request to access, delete, or correct your personal information by contacting us at:</p>
+          <p>Email: support@modulargunworks.com<br>
+          Phone: (XXX) XXX‑XXXX</p>
+        </div>
+      </div>
+
+      <!-- PRIVACY CHOICES -->
+      <div id="sec-privacy-choices" class="policy-section">
+        <button class="policy-toggle">Your Privacy Choices</button>
+        <div class="policy-content">
+          <p>You may have the ability to:</p>
+          <ul>
+            <li>Opt out of marketing emails</li>
+            <li>Disable cookies through your browser</li>
+            <li>Limit data sharing with third parties</li>
+            <li>Request deletion of your personal information</li>
+          </ul>
+        </div>
+      </div>
+
+    </main>
   </div>
 
-  <div class="policy-container">
-    <h1 class="policy-title">Privacy Policy</h1>
-    <p class="policy-updated">Last Updated: 23 Sept 2025</p>
+  <!-- FOOTER -->
+  <footer class="site-footer">
+    <div class="footer-columns">
+      <div>
+        <h4>Company</h4>
+        <ul>
+          <li><a href="about.html">About Modular Gunworks</a></li>
+          <li><a href="careers.html">Careers</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+      </div>
 
-    <div class="policy-section">
-      <button class="policy-toggle">Introduction</button>
-      <div class="policy-content">
-        <p>
-          This Privacy Policy explains how Modular Gunworks LLC collects, uses, and protects your information.
-        </p>
+      <div>
+        <h4>Info</h4>
+        <ul>
+          <li><a href="terms.html#sec-faq">FAQ</a></li>
+          <li><a href="terms.html#sec-ffl-transfer">FFL Transfers</a></li>
+          <li><a href="order-status.html">Order Status</a></li>
+          <li><a href="terms.html#sec-shipping-policy">Shipping Info</a></li>
+        </ul>
+      </div>
+
+      <div>
+        <h4>Legal</h4>
+        <ul>
+          <li><a href="terms.html#sec-terms">Terms & Conditions</a></li>
+          <li><a href="privacy.html">Privacy Policy</a></li>
+          <li><a href="terms.html#sec-returns">Return Policy</a></li>
+        </ul>
       </div>
     </div>
 
-    <!-- Add more sections here -->
-  </div>
+    <div class="footer-bottom">
+      © 2025 Modular Gunworks LLC. All rights reserved.  
+      <br>support@modulargunworks.com
+    </div>
+  </footer>
 
-  <script>
-    const toggles = document.querySelectorAll('.policy-toggle');
-    toggles.forEach(toggle => {
-      toggle.addEventListener('click', () => {
-        const content = toggle.nextElementSibling;
-        content.style.display = content.style.display === 'block' ? 'none' : 'block';
-      });
-    });
-  </script>
+  <script src="scripts.js"></script>
 
 </body>
 </html>
