--- a/privacy.html
+++ b/privacy.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Privacy Policy – Modular Gunworks LLC</title>
@@ -8,7 +9,7 @@
 
 <body>
 
-  <!-- HERO FLAG HEADER (FULL WIDTH) -->
+  <!-- HERO FLAG HEADER -->
   <div class="hero-header">
     PRIVACY POLICY – MODULAR GUNWORKS LLC
   </div>
@@ -40,13 +41,31 @@
     <a href="shop/sale.md">ON SALE</a>
   </nav>
 
-  <!-- PAGE CONTENT (REPLACES CATEGORY GRID) -->
-  <section class="category-grid">
-    <h2>Privacy Policy</h2>
+  <!-- DOCUMENT HUB LAYOUT -->
+  <div class="doc-layout">
 
-    <div class="policy-container">
+    <!-- SIDEBAR -->
+    <aside class="doc-sidebar">
+      <h2>Explore Our Document Hub</h2>
+      <ul>
+        <li><a href="#sec-privacy-intro">Introduction</a></li>
+        <li><a href="#sec-privacy-changes">Changes to This Privacy Policy</a></li>
+        <li><a href="#sec-privacy-collection">Information Collection</a></li>
+        <li><a href="#sec-privacy-processing">Why We Process Your Information</a></li>
+        <li><a href="#sec-privacy-cookies">Cookies & Similar Technologies</a></li>
+        <li><a href="#sec-privacy-california">California Shine the Light Disclosure</a></li>
+        <li><a href="#sec-privacy-contact">Contact Us</a></li>
+        <li><a href="#sec-privacy-state-notices">US State Privacy Notices</a></li>
+        <li><a href="#sec-privacy-request">Make a Privacy Request</a></li>
+        <li><a href="#sec-privacy-choices">Your Privacy Choices</a></li>
+      </ul>
+    </aside>
 
-      <p class="policy-updated"><strong>Last Updated:</strong> 23 September 2025</p>
+    <!-- MAIN CONTENT -->
+    <main class="doc-main">
+
+      <h1 class="policy-title">Privacy Policy – Modular Gunworks LLC</h1>
+      <p class="policy-updated">Last Updated: 23 September 2025</p>
 
       <button id="expand-collapse-all" class="expand-all-btn">Expand All</button>
 
@@ -56,7 +75,7 @@
         <div class="policy-content">
           <p>Modular Gunworks LLC (“Modular Gunworks”, “we”, “us”, or “our”) respects your privacy and is committed to protecting it through this Privacy Policy.</p>
           <p>This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our website, purchase products, contact our support team, engage with us on social media, or otherwise interact with our services (“Services”).</p>
-          <p>By accessing or using our Services, you agree to the practices described in this Privacy Policy. If you do not agree, you should discontinue use of our Services.</p>
+          <p>By accessing or using our Services, you agree to the practices described in this Privacy Privacy. If you do not agree, you should discontinue use of our Services.</p>
         </div>
       </div>
 
@@ -197,8 +216,8 @@
         </div>
       </div>
 
-    </div>
-  </section>
+    </main>
+  </div>
 
   <!-- FOOTER -->
   <footer class="site-footer">
